--- a/DefaultCorsPolicyNugetPackage.csproj
+++ b/DefaultCorsPolicyNugetPackage.csproj
@@ -7,15 +7,17 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageId>DefaultCorsPolicy</PackageId>
     <Title>Default Cors Policy</Title>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <Authors>Taner Saydam</Authors>
     <Company>Taner Saydam</Company>
     <Product>DefaultCorsPolicy</Product>
     <Description>This package configures CORS</Description>
     <PackageIcon>logo.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <AssemblyVersion>1.0.0</AssemblyVersion>
-    <FileVersion>1.0.0</FileVersion>
+    <AssemblyVersion>1.0.1</AssemblyVersion>
+    <FileVersion>1.0.1</FileVersion>
+    <RepositoryUrl>https://github.com/TanerSaydam/DefaultCorsPolicyNugetPackage</RepositoryUrl>
+    <RepositoryType>https://github.com/TanerSaydam/DefaultCorsPolicyNugetPackage.git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
