--- a/DefaultCorsPolicyNugetPackage.csproj
+++ b/DefaultCorsPolicyNugetPackage.csproj
@@ -1,38 +1,35 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageId>DefaultCorsPolicy</PackageId>
     <Title>Default Cors Policy</Title>
-    <Version>1.0.1</Version>
+    <Version>8.0.0</Version>
     <Authors>Taner Saydam</Authors>
     <Company>Taner Saydam</Company>
     <Product>DefaultCorsPolicy</Product>
     <Description>This package configures CORS</Description>
     <PackageIcon>logo.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <AssemblyVersion>1.0.1</AssemblyVersion>
-    <FileVersion>1.0.1</FileVersion>
+    <AssemblyVersion></AssemblyVersion>
+    <FileVersion></FileVersion>
     <RepositoryUrl>https://github.com/TanerSaydam/DefaultCorsPolicyNugetPackage</RepositoryUrl>
     <RepositoryType>https://github.com/TanerSaydam/DefaultCorsPolicyNugetPackage.git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\..\..\Downloads\logo.png">
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="logo.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Update="README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
